--- a/Apid/packages.config
+++ b/Apid/packages.config
@@ -2,14 +2,13 @@
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net45" />
   <package id="ini-parser" version="2.3.0" targetFramework="net45" />
-  <package id="log4net" version="2.0.5" targetFramework="net45" />
+  <package id="log4net" version="2.0.7" targetFramework="net45" />
   <package id="modernhttpclient" version="2.4.2" targetFramework="net45" />
-  <package id="Nancy" version="1.4.3" targetFramework="net40" />
-  <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net40" />
+  <package id="Nancy" version="1.4.3" targetFramework="net45" />
+  <package id="Nancy.Hosting.Self" version="1.4.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
-  <package id="OAuth2" version="0.8.37" targetFramework="net45" />
+  <package id="OAuth2" version="0.8.40" targetFramework="net45" />
   <package id="RestSharp" version="105.2.3" targetFramework="net45" />
-  <package id="Semiodesk.Trinity.Core" version="0.9.147-rc" targetFramework="net40" />
+  <package id="Semiodesk.Trinity.Core" version="0.9.152" targetFramework="net45" />
   <package id="TinyVirtuoso" version="0.3.29" targetFramework="net45" />
-  <package id="TinyVirtuoso.win" version="7.2.1" targetFramework="net45" />
 </packages>
