--- a/Api/packages.config
+++ b/Api/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Nancy" version="1.4.3" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
-  <package id="Semiodesk.Trinity.Core" version="0.9.147-rc" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net45" />
+  <package id="Semiodesk.Trinity.Core" version="0.9.152" targetFramework="net45" />
 </packages>
