--- a/Apid.Mac/packages.config
+++ b/Apid.Mac/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="CommandLineParser" version="1.9.71" targetFramework="net40" />
   <package id="ini-parser" version="2.3.0" targetFramework="net45" />
+  <package id="log4net" version="2.0.7" targetFramework="net45" />
   <package id="TinyVirtuoso" version="0.3.29" targetFramework="net45" />
   <package id="TinyVirtuoso.osx" version="7.2.2" targetFramework="net45" />
 </packages>
