--- a/Apid.Windows/Apid.Windows.csproj
+++ b/Apid.Windows/Apid.Windows.csproj
@@ -105,7 +105,7 @@
     <None Include="app.config">
       <SubType>Designer</SubType>
     </None>
-    <None Include="debug.log.config">
+    <None Include="log.config.debug">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
