--- a/Apid.Windows/packages.config
+++ b/Apid.Windows/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="ini-parser" version="2.3.0" targetFramework="net45" />
-  <package id="log4net" version="2.0.5" targetFramework="net45" />
+  <package id="log4net" version="2.0.7" targetFramework="net45" />
   <package id="TinyVirtuoso" version="0.3.29" targetFramework="net45" />
+  <package id="TinyVirtuoso.win" version="7.2.1" targetFramework="net45" />
 </packages>
