Changed name of APID executable on Windows to match artivity-apid on other platforms.

--- a/Apid.Windows/Apid.Windows.csproj
+++ b/Apid.Windows/Apid.Windows.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Artivity.Apid.Windows</RootNamespace>
-    <AssemblyName>Artivity.Apid.Windows</AssemblyName>
+    <AssemblyName>artivity-apid</AssemblyName>
     <FileAlignment>512</FileAlignment>
     <ReleaseVersion>1.6</ReleaseVersion>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
