--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -60,6 +60,8 @@
     <Compile Include="ObjectModel\Person.cs" />
     <Compile Include="ObjectModel\Activity.cs" />
     <Compile Include="ObjectModel\SoftwareAssociation.cs" />
+    <Compile Include="ObjectModel\SynchronizableResource.cs" />
+    <Compile Include="ObjectModel\ResourceSynchronizationState.cs" />
     <Compile Include="Ontologies\Ontologies.g.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Compile>
@@ -104,6 +106,7 @@
     <Compile Include="ObjectModel\DatabaseState.cs" />
     <Compile Include="ModelProviderFactory.cs" />
     <Compile Include="Ontologies\Ontologies.i.cs" />
+    <Compile Include="ObjectModel\OnlineAccountSynchronizationState.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -173,6 +176,8 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup />
+  <ItemGroup>
+    <None Include="Ontologies\arts.ttl" />
+  </ItemGroup>
   <Import Project="..\packages\Semiodesk.Trinity.Modelling.0.9.152\build\net40\Semiodesk.Trinity.Modelling.targets" Condition="Exists('..\packages\Semiodesk.Trinity.Modelling.0.9.152\build\net40\Semiodesk.Trinity.Modelling.targets')" />
 </Project>
