--- a/DataModel/app.config
+++ b/DataModel/app.config
@@ -8,60 +8,49 @@
   </connectionStrings>
   <TrinitySettings namespace="Artivity.DataModel">
     <OntologySettings>
-
       <Ontology Uri="http://www.w3.org/1999/02/22-rdf-syntax-ns#" Prefix="rdf">
         <FileSource Location="Ontologies/rdf.rdf"/>
       </Ontology>
-
       <Ontology Uri="http://www.w3.org/2000/01/rdf-schema#" Prefix="rdfs">
         <FileSource Location="Ontologies/rdfs.n3"/>
       </Ontology>
-
       <Ontology Uri="http://www.w3.org/2002/07/owl#" Prefix="owl">
         <FileSource Location="Ontologies/owl.n3"/>
       </Ontology>
-
       <Ontology Uri="http://www.w3.org/ns/prov#" Prefix="prov">
         <FileSource Location="Ontologies/prov.rdf"/>
       </Ontology>
-      
       <Ontology Uri="http://www.w3.org/2001/04/infoset#" Prefix="xml">
         <FileSource Location="Ontologies/xml.rdf"/>
       </Ontology>
-
       <Ontology Uri="http://www.semanticdesktop.org/ontologies/2007/08/15/nao#" Prefix="nao">
         <FileSource Location="Ontologies/nao.rdf"/>
       </Ontology>
-      
       <Ontology Uri="http://www.semanticdesktop.org/ontologies/2007/01/19/nie#" Prefix="nie">
         <FileSource Location="Ontologies/nie.rdf"/>
       </Ontology>
-      
       <Ontology Uri="http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#" Prefix="nfo">
         <FileSource Location="Ontologies/nfo.rdf"/>
       </Ontology>
-      
       <Ontology Uri="http://w3id.org/art/terms/1.0/" Prefix="art">
         <FileSource Location="Ontologies/art.ttl"/>
       </Ontology>
-
       <Ontology Uri="http://w3id.org/art/terms/1.0/features/" Prefix="artf">
         <FileSource Location="Ontologies/artf.ttl"/>
       </Ontology>
-      
+      <Ontology Uri="http://w3id.org/art/terms/1.0/synchronization/" Prefix="arts">
+        <FileSource Location="Ontologies/arts.ttl"/>
+      </Ontology>
       <Ontology Uri="http://xmlns.com/foaf/0.1/" Prefix="foaf">
         <FileSource Location="Ontologies/foaf.rdf"/>
       </Ontology>
-      
       <Ontology Uri="http://purl.org/dc/elements/1.1/" Prefix="dces">
         <FileSource Location="Ontologies/dcelements.ttl"/>
       </Ontology>
-
       <Ontology Uri="http://rdfs.org/sioc/ns#" Prefix="sioc">
         <FileSource Location="Ontologies/sioc.rdf"/>
       </Ontology>
     </OntologySettings>
-
     <VirtuosoStoreSettings>
       <RuleSets>
         <RuleSet Uri="urn:semiodesk/ruleset">
