Implemented syncing of projects.

--- a/Apid/Apid.csproj
+++ b/Apid/Apid.csproj
@@ -123,7 +123,7 @@
     <Compile Include="Protocols\Authentication\OAuth2AuthenticationClient.cs" />
     <Compile Include="Protocols\Authentication\IHttpAuthenticationClient.cs" />
     <Compile Include="Services\IOnlineServicePublishingClient.cs" />
-    <Compile Include="Services\IOnlineServiceSynchronizationClient.cs" />
+    <Compile Include="Services\IArtivityServiceSynchronizationClient.cs" />
     <Compile Include="Services\OnlineServiceClientBase.cs" />
     <Compile Include="Services\OnlineServiceClientFactory.cs" />
     <Compile Include="Services\IOnlineServiceClient.cs" />
@@ -169,11 +169,12 @@
     <Compile Include="IO\DefaultFileSystemWatcher.cs" />
     <Compile Include="Modules\ExportModule.cs" />
     <Compile Include="Services\OnlineServiceClientSession.cs" />
-    <Compile Include="Synchronization\IOnlineServiceSynchronizationProvider.cs" />
-    <Compile Include="Synchronization\OnlineServiceSynchronizer.cs" />
-    <Compile Include="Synchronization\SynchronizationActionType.cs" />
-    <Compile Include="Synchronization\SynchronizationChangeset.cs" />
-    <Compile Include="Synchronization\SynchronizationChangesetItem.cs" />
+    <Compile Include="Services\IArtivityServiceSynchronizationProvider.cs" />
+    <Compile Include="Services\Synchronization\ArtivityServiceSynchronizer.cs" />
+    <Compile Include="Services\Synchronization\ISynchronizationChangeset.cs" />
+    <Compile Include="Services\Synchronization\SynchronizationActionType.cs" />
+    <Compile Include="Services\Synchronization\SynchronizationChangeset.cs" />
+    <Compile Include="Services\Synchronization\SynchronizationChangesetItem.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
