--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -56,6 +56,7 @@
     <Compile Include="ObjectModel\Entities\Website.cs" />
     <Compile Include="ObjectModel\FileDataObject\RenderingDataObject.cs" />
     <Compile Include="ObjectModel\HttpAuthenticationProtocol.cs" />
+    <Compile Include="ObjectModel\IUserAgent.cs" />
     <Compile Include="ObjectModel\OnlineAccount.cs" />
     <Compile Include="ObjectModel\HttpAuthenticationParameter.cs" />
     <Compile Include="ObjectModel\Person.cs" />
