--- a/DataModel/DataModel.csproj
+++ b/DataModel/DataModel.csproj
@@ -112,7 +112,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="Ontologies\artf.ttl" />
+    <None Include="Ontologies\artf.ttl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Ontologies\nao.rdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -125,7 +127,9 @@
     <None Include="Ontologies\prov.rdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Include="Ontologies\sioc.rdf" />
+    <None Include="Ontologies\sioc.rdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Include="Ontologies\xml.rdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
@@ -140,9 +144,15 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="packages.config" />
-    <None Include="Ontologies\rdfs.n3" />
-    <None Include="Ontologies\rdf.rdf" />
-    <None Include="Ontologies\owl.n3" />
+    <None Include="Ontologies\rdfs.n3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Ontologies\rdf.rdf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Include="Ontologies\owl.n3">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -179,7 +189,9 @@
   </Target>
   -->
   <ItemGroup>
-    <None Include="Ontologies\arts.ttl" />
+    <None Include="Ontologies\arts.ttl">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <Import Project="..\packages\Semiodesk.Trinity.Modelling.0.9.152\build\net40\Semiodesk.Trinity.Modelling.targets" Condition="Exists('..\packages\Semiodesk.Trinity.Modelling.0.9.152\build\net40\Semiodesk.Trinity.Modelling.targets')" />
 </Project>
