Synchronization now uses type inference over the Artivity ontology to determine which sync handler to use. Note: Reloading the ontologies might be required for the sync to work properly. Bugfix: Fixed ontology settings for project.

--- a/Apid.Windows/Apid.Windows.csproj
+++ b/Apid.Windows/Apid.Windows.csproj
@@ -105,6 +105,7 @@
   <ItemGroup>
     <None Include="app.config">
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="log.config.debug">
       <SubType>Designer</SubType>
