--- a/Apid/Apid.csproj
+++ b/Apid/Apid.csproj
@@ -180,6 +180,7 @@
   <ItemGroup>
     <None Include="app.config">
       <SubType>Designer</SubType>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
     <None Include="COPYING" />
     <None Include="packages.config">
