--- a/DataModel/app.config
+++ b/DataModel/app.config
@@ -63,8 +63,9 @@
             <Graph Uri="http://www.semanticdesktop.org/ontologies/2007/01/19/nie#"/>
             <Graph Uri="http://www.semanticdesktop.org/ontologies/2007/03/22/nfo#"/>
             <Graph Uri="http://xmlns.com/foaf/0.1/"/>
-            <Graph Uri="http://semiodesk.com/artivity/1.0/"/>
             <Graph Uri="http://purl.org/dc/elements/1.1/"/>
+            <Graph Uri="http://w3id.org/art/terms/1.0/"/>
+            <Graph Uri="http://w3id.org/art/terms/1.0/synchronization/"/>
           </Graphs>
         </RuleSet>
       </RuleSets>
