--- a/Journal/bower.json
+++ b/Journal/bower.json
@@ -17,31 +17,32 @@
   ],
   "dependencies": {
     "jquery": "^2.2.0",
-    "jquery-ui": "^1.12.1",
     "jquery-editable-select": "^2.0.0",
+    "jquery-ui": "^1.12.1",
     "angular": "1.5.8",
     "angular-animate": "1.5.8",
-    "angular-route": "1.5.8",
-    "angular-ui": "^0.4.0",
     "angular-bootstrap": "^2.1.3",
+    "angular-dragdrop": "^1.0.13",
+    "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0",
     "angular-input-modified": "^2.3.3",
     "angular-moment": "^0.10.0",
+    "angular-route": "1.5.8",
+    "angular-translate": "^2.13.0",
+    "angular-ui": "^0.4.0",
+    "angular-ui-layout": "^1.4.2",
+    "base64": "^1.0.0",
     "bootstrap": "^3.3.6",
     "bootstrap-colorpicker": "^2.3.3",
     "bootstrap-switch": "^3.3.2",
     "color-thief": "^2.0.1",
-    "EaselJS": "^0.8.2",
+    "d3": "^4.2.3",
+    "font-roboto": "^0.0.2",
+    "fullcalendar": "^3.0.0",
+    "material-design-iconic-font": "^2.2.0",
     "moment": "~2.15.1",
     "moment-duration-format": "^1.3.0",
-    "base64": "^1.0.0",
-    "d3": "^4.2.3",
-    "material-design-iconic-font": "^2.2.0",
-    "fullcalendar": "^3.0.0",
-    "yasgui": "^2.4.1",
-    "angular-hotkeys": "chieffancypants/angular-hotkeys#^1.7.0",
-    "font-roboto": "^0.0.2",
-    "angular-translate": "^2.13.0",
-    "angular-dragdrop": "^1.0.13"
+    "EaselJS": "^0.8.2",
+    "yasgui": "^2.4.1"
   },
   "resolutions": {
     "angular": "1.5.8",
@@ -56,5 +57,6 @@
         "less/bootstrap.less"
       ]
     }
-  }
+  },
+  "devDependencies": {}
 }
