--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -68,12 +68,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Modules\CommentModule.cs" />
-    <Compile Include="Modules\DerivationModule.cs" />
-    <Compile Include="Modules\ImageModule.cs" />
     <Compile Include="Infrastructure\StreamExtensions.cs" />
     <Compile Include="IO\ArchiveWriters\ActivityArchiveWriter.cs" />
     <Compile Include="IO\ArchiveWriters\EntityArchiveWriter.cs" />
     <Compile Include="Modules\ImageEntityModule.cs" />
+    <Compile Include="Modules\MarkModule.cs" />
+    <Compile Include="Parameters\MarkParameter.cs" />
     <Compile Include="Platform\IThumbnailProvider.cs" />
     <Compile Include="IO\ArchiveManifest.cs" />
     <Compile Include="IO\ArchiveManifestCreator.cs" />
