--- a/Api/Api.csproj
+++ b/Api/Api.csproj
@@ -73,7 +73,9 @@
     <Compile Include="IO\ArchiveWriters\EntityArchiveWriter.cs" />
     <Compile Include="Modules\ImageEntityModule.cs" />
     <Compile Include="Modules\MarkModule.cs" />
+    <Compile Include="Modules\TopicModule.cs" />
     <Compile Include="Parameters\MarkParameter.cs" />
+    <Compile Include="Parameters\TopicParameter.cs" />
     <Compile Include="Platform\IThumbnailProvider.cs" />
     <Compile Include="IO\ArchiveManifest.cs" />
     <Compile Include="IO\ArchiveManifestCreator.cs" />
